# benchbench

./: .gitignore  README.md  pyproject.toml
src/benchbench/: discovery.py  models.py  parser.py  runner.py  storage.py  task.py  validation.py
src/benchbench/cli/: __init__.py  db.py  filtering.py  grade.py  run.py  show.py  tasks.py
src/benchbench/migrations/: __init__.py  m_0_2_0.py
tests/parser/: test_parser.py  testfile_valid.md
tests/storage/: test_storage.py
